<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.profile.UserProfileActivity"
        android:background="?colorPrimary">


    <com.google.android.material.imageview.ShapeableImageView
            app:shapeAppearance="@style/circle"
            android:layout_width="115dp"
            android:layout_height="115dp"
            tools:srcCompat="@tools:sample/avatars"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:id="@+id/profilePic"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="1dp"
            android:cropToPadding="false"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:padding="5dp"
            app:strokeColor="@color/black"
            app:strokeWidth="3dp"
            android:layout_marginBottom="1dp"
            app:layout_constraintBottom_toTopOf="@+id/view"
            android:contentDescription="@string/profile_image"
            tools:ignore="ImageContrastCheck" />

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@android:drawable/ic_menu_camera"
            android:id="@+id/pfp_cam_icon"
            app:layout_constraintEnd_toEndOf="@+id/profilePic"
            app:layout_constraintBottom_toBottomOf="@+id/profilePic" />

    <TextView
            android:id="@+id/usernameText"
            android:layout_width="260dp"
            android:layout_height="25dp"
            android:layout_marginTop="25dp"
            android:gravity="bottom"
            android:text="ExampleUsername"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintTop_toTopOf="parent"
            android:textStyle="bold"
            android:textIsSelectable="true"
            app:layout_constraintBottom_toTopOf="@+id/view"
            android:layout_marginBottom="50dp"
            app:layout_constraintStart_toEndOf="@+id/profilePic"
            android:layout_marginStart="10dp" />

    <TextView
            android:id="@+id/emailText"
            android:layout_width="260dp"
            android:layout_height="25dp"
            android:gravity="top"
            android:text="email@example.com"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/view"
            android:layout_marginBottom="25dp"
            android:textStyle="bold"
            android:textIsSelectable="false"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="50dp"
            app:layout_constraintStart_toEndOf="@+id/profilePic"
            android:layout_marginStart="10dp" />

    <View
            android:id="@+id/view"
            android:layout_width="wrap_content"
            android:layout_height="3dp"
            android:background="#FFFFFF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="125dp" />

    <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/view"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/accountSettingsText"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/account_settings"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:layout_marginEnd="16dp" />

            <Button
                    android:id="@+id/changeUsernameButton"
                    android:layout_width="match_parent"
                    android:layout_height="58dp"
                    android:layout_marginStart="28dp"
                    android:backgroundTint="#FFFFFF"
                    android:text="@string/change_username"
                    android:textAlignment="viewStart"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    tools:ignore="TextContrastCheck"
                    android:textAllCaps="false"
                    android:paddingStart="20dp"
                    android:fontFamily="sans-serif-medium"
                    android:layout_marginEnd="28dp" />

            <Button
                    android:id="@+id/changeEmailButton"
                    android:layout_width="match_parent"
                    android:layout_height="58dp"
                    android:layout_marginStart="28dp"
                    android:backgroundTint="#FFFFFF"
                    android:text="@string/change_email"
                    android:textAlignment="viewStart"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    tools:ignore="TextContrastCheck"
                    android:textAllCaps="false"
                    android:paddingStart="20dp"
                    android:fontFamily="sans-serif-medium"
                    android:layout_marginEnd="28dp" />

            <Button
                    android:id="@+id/changePasswordButton"
                    android:layout_width="match_parent"
                    android:layout_height="58dp"
                    android:layout_marginStart="28dp"
                    android:backgroundTint="#FFFFFF"
                    android:text="@string/change_password"
                    android:textAlignment="viewStart"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    tools:ignore="TextContrastCheck"
                    android:textAllCaps="false"
                    android:paddingStart="20dp"
                    android:fontFamily="sans-serif-medium"
                    android:layout_marginEnd="28dp" />

            <TextView
                    android:id="@+id/socialSettingsText"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/social_settings"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:layout_marginEnd="16dp" />

            <Button
                    android:id="@+id/viewFriendsListButton"
                    android:layout_width="match_parent"
                    android:layout_height="58dp"
                    android:layout_marginStart="28dp"
                    android:backgroundTint="#FFFFFF"
                    android:text="@string/view_friends"
                    android:textAlignment="viewStart"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    tools:ignore="TextContrastCheck"
                    android:textAllCaps="false"
                    android:paddingStart="20dp"
                    android:fontFamily="sans-serif-medium"
                    android:layout_marginEnd="28dp" />

            <Button
                    android:id="@+id/viewBlockListButton"
                    android:layout_width="match_parent"
                    android:layout_height="58dp"
                    android:layout_marginStart="28dp"
                    android:backgroundTint="#FFFFFF"
                    android:text="@string/view_blocked"
                    android:textAlignment="viewStart"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:typeface="normal"
                    tools:ignore="TextContrastCheck"
                    android:textAllCaps="false"
                    android:paddingStart="20dp"
                    android:fontFamily="sans-serif-medium"
                    android:layout_marginEnd="28dp" />

            <TextView
                    android:id="@+id/streamingServicesText"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/service_select"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:layout_marginEnd="16dp" />

            <FrameLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <CheckBox
                        android:id="@+id/netflixCheckbox"
                        style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                        android:layout_width="48dp"
                        android:layout_height="match_parent"
                        android:layoutDirection="inherit"
                        android:textSize="16sp"
                        android:translationZ="5dp"
                        android:layout_gravity="right"
                        android:layout_marginEnd="28dp" />

                <Button
                        android:id="@+id/netflixButton"
                        android:layout_width="match_parent"
                        android:layout_height="58dp"
                        android:backgroundTint="#FFFFFF"
                        android:text="@string/service_netflix"
                        android:textAlignment="viewStart"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        android:typeface="normal"
                        tools:ignore="TextContrastCheck"
                        android:textAllCaps="false"
                        android:paddingStart="20dp"
                        android:fontFamily="sans-serif-medium"
                        android:layout_marginEnd="28dp"
                        android:layout_marginStart="28dp" />

            </FrameLayout>

            <FrameLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <CheckBox
                        android:id="@+id/hboCheckbox"
                        style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                        android:layout_width="48dp"
                        android:layout_height="match_parent"
                        android:layoutDirection="inherit"
                        android:textSize="16sp"
                        android:translationZ="5dp"
                        android:layout_gravity="right"
                        android:layout_marginEnd="28dp" />

                <Button
                        android:id="@+id/hboButton"
                        android:layout_width="match_parent"
                        android:layout_height="58dp"
                        android:backgroundTint="#FFFFFF"
                        android:text="@string/service_hbo"
                        android:textAlignment="viewStart"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        android:typeface="normal"
                        tools:ignore="TextContrastCheck"
                        android:textAllCaps="false"
                        android:paddingStart="20dp"
                        android:fontFamily="sans-serif-medium"
                        android:layout_marginEnd="28dp"
                        android:layout_marginStart="28dp" />

            </FrameLayout>

            <FrameLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <CheckBox
                        android:id="@+id/huluCheckbox"
                        style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                        android:layout_width="48dp"
                        android:layout_height="match_parent"
                        android:layoutDirection="inherit"
                        android:textSize="16sp"
                        android:translationZ="5dp"
                        android:layout_gravity="right"
                        android:layout_marginEnd="28dp" />

                <Button
                        android:id="@+id/huluButton"
                        android:layout_width="match_parent"
                        android:layout_height="58dp"
                        android:backgroundTint="#FFFFFF"
                        android:text="@string/service_hulu"
                        android:textAlignment="viewStart"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        android:typeface="normal"
                        tools:ignore="TextContrastCheck"
                        android:textAllCaps="false"
                        android:paddingStart="20dp"
                        android:fontFamily="sans-serif-medium"
                        android:layout_marginEnd="28dp"
                        android:layout_marginStart="28dp" />

            </FrameLayout>

            <FrameLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <CheckBox
                        android:id="@+id/amazonPrimeCheckbox"
                        style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                        android:layout_width="48dp"
                        android:layout_height="match_parent"
                        android:layoutDirection="inherit"
                        android:textSize="16sp"
                        android:translationZ="5dp"
                        android:layout_gravity="right"
                        android:layout_marginEnd="28dp" />

                <Button
                        android:id="@+id/amazonPrimeButton"
                        android:layout_width="match_parent"
                        android:layout_height="58dp"
                        android:backgroundTint="#FFFFFF"
                        android:text="@string/service_amazon"
                        android:textAlignment="viewStart"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        android:typeface="normal"
                        tools:ignore="TextContrastCheck"
                        android:textAllCaps="false"
                        android:paddingStart="20dp"
                        android:fontFamily="sans-serif-medium"
                        android:layout_marginEnd="28dp"
                        android:layout_marginStart="28dp" />

            </FrameLayout>

            <FrameLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <CheckBox
                        android:id="@+id/disneyCheckbox"
                        style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                        android:layout_width="48dp"
                        android:layout_height="match_parent"
                        android:layoutDirection="inherit"
                        android:textSize="16sp"
                        android:translationZ="5dp"
                        android:layout_gravity="right"
                        android:layout_marginEnd="28dp" />

                <Button
                        android:id="@+id/disneyButton"
                        android:layout_width="match_parent"
                        android:layout_height="58dp"
                        android:backgroundTint="#FFFFFF"
                        android:text="@string/service_disney"
                        android:textAlignment="viewStart"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        android:typeface="normal"
                        tools:ignore="TextContrastCheck"
                        android:textAllCaps="false"
                        android:paddingStart="20dp"
                        android:fontFamily="sans-serif-medium"
                        android:layout_marginEnd="28dp"
                        android:layout_marginStart="28dp" />

            </FrameLayout>

            <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>